--- a/07_event_manager/form_letter.erb
+++ b/07_event_manager/form_letter.erb
@@ -4,7 +4,7 @@
         <title>Thank You!</title>
     </head>
     <body>
-        <h1>Thanks FIRST_NAME!</h1>
+        <h1>Thanks <%=name %></h1>
         <p>Thanks for coming to our conference. We couldn't have done it without you!</p>
     
         <p>
