--- a/07_event_manager/form_letter.erb
+++ b/07_event_manager/form_letter.erb
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1>Thanks <%= name %></h1>
+  <h3>Zipcode: <%= zipcode%></h3>
   <p>Thanks for coming to our conference.  We couldn't have done it without you!</p>
 
   <p>
