add tag for phone and update tags to p

--- a/07_event_manager/form_letter.erb
+++ b/07_event_manager/form_letter.erb
@@ -5,7 +5,8 @@
 </head>
 <body>
   <h1>Thanks <%= name %></h1>
-  <h3>Zipcode: <%= zipcode%></h3>
+  <p><b>Zipcode:</b> <%= zipcode%></p>
+  <p><b>Phone:</b> <%= phone_number%></p>
   <p>Thanks for coming to our conference.  We couldn't have done it without you!</p>
 
   <p>
